# c_plan_5025

./: .gitignore  CMakeLists.txt  README.md
main_src/v1_base_syntax/: a_Hello_world.cpp  b_sizeof.cpp  c_string.cpp  d_list.cpp  e_poniter.cpp  e_poniter_func.cpp  e_poniter_list.cpp  f_8_struct.cpp  f_9_struct_const.cpp  k_8_demo_v1.cpp  m_9_address_book.cpp
main_src/v2_core/: v1_1_run_before.cpp  v1_2_run_before_v2.cpp  v1_3_new_operator.cpp  v1_3_run_before_v3.cpp  v1_4_new_list.cpp  v3_1_func.cpp  v3_3_func_reloading.cpp  v3_3_func_reloading_v2.cpp
main_src/v2_core/v2_quote/: v2_1_quote_base_use.cpp  v2_3_quote_func.cpp  v2_4_quote_return.cpp  v2_5_quote_nature.cpp  v2_6_const_quote.cpp
main_src/v2_core/v4_class/v1_package/: v4_1_package.cpp  v4_1_package_v2.cpp  v4_1_package_v3.cpp  v4_1_set_private.cpp  v4_1_struct_and_class.cpp
main_src/v2_core/v4_class/v2_init/: v4_2_4_init_default_v3.cpp  v4_2_5_deep_copy.cpp  v4_2_copy_func.cpp  v4_2_init.cpp  v4_2_init_v2.cpp
main_src/v2_core/v4_class/v3_this/: v4_3_this.cpp
main_src/v2_core/v4_class/v6_inherit/: v1_base_inherit_v2.cpp  v1_no_inherit.cpp  v2_inherit_method.cpp  v3_inherit_object.cpp
main_src/v2_core/v4_class/v7_polymorphic/: v1_polymorphic_demo.cpp  v4_abstract.cpp  v6_cup.cpp
main_src/v2_core/v5_io/: v1_wtite.cpp  v2_read.cpp  v3_wtrie_bin.cpp  v4_read_bin.cpp
